# spark-playground-scratch

./: .pre-commit-config.yaml  Makefile  README.md  cookiecutter_inputs.json  delete.txt  pyproject.toml
.github/workflows/: checkout_actions.yml  code_quality.yml  create_release_rc.yml  generate_template.yml  pass_secrets.yml  test.yml  unit_test_comment.yml
config/: pipeline.yaml
docs/: validation_step.md  validation_template.md
scripts/git/: bash_equivalent_powershell.sh  new.sh  see_notes.sh
scripts/github/: bash.sh  curl_token.txt  get_tags_release.py
src/: test.md  utils.py
src/apps/: solara_basic2.py  solara_tkinter.py  streamlit_aggrid.py  table_filter_drop_down.py
src/apps_explore/: archerirm.py  filter_column_cleanup.py  playwright_example.py  solara_basic.py  solara_basic2.py  solara_tkinter.py  streamlit.py  streamlit_aggrid.py  streamlit_extra_features.py  streamlit_mock_df.py
src/artifactory/: load_model.py
src/code_understanding/: pandas_udf_equivalent.py
src/config/: test.yaml  transpose_config.py
src/confluence/: create_confluence_pages.py  create_markdown_table_with_colors.py  documentation_structure.py  example_text.md  utils.py
src/date/: date_functions.py  holidays.py
src/deployment/: new_deployment_process.md  test_deployment.py
src/docs/: validation_template.md
src/eda/: drop_nulls.py  hive_tables.py  stdev.py
src/features/: conditional_feature_encoding.py  debug_empty_string.py  feature_selection.py  feature_selection_chi_squared.py  minimum_bad_rate.py  ohe_split_out.py  one_hot_encoding_sklearn.py  (+1 more)
(+139 files in other folders)
