[tool.poetry]
name = "test_project"
version = "0.1.0"
description = ""
authors = ["jimmfan <jimmmfan@github.com>"]
readme = "README.md"
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "3.10"

[tool.poetry.group.dev.dependencies]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]